# cis194

./: LICENSE  README.md  cis194.cabal
src/CIS194/: Homework01.hs
src/CIS194/HW01/: CreditCardNumbers.hs
src/CIS194/HW10/: AParser.hs  Applicative.hs  EX01.hs  EX02.hs
src/CIS194/Homework01/: CreditCardNumbers.hs
test/CIS194/: Homework01Spec.hs
test/CIS194/HW01/: CreditCardNumbersSpec.hs
test/CIS194/HW10/: ApplicativeSpec.hs  EX01Spec.hs
test/CIS194/Homework01/: CreditCardNumbersSpec.hs
