name:                cis194
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/sestrella/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastián Estrella
maintainer:          sebas007estrella@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CIS194.Homework01.CreditCardNumbers
                       CIS194.HW10.AParser
                       CIS194.HW10.EX01
                       CIS194.HW10.EX02
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cis194
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sestrella/cis194
